--- a/pages/error404.html
+++ b/pages/error404.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="../css/bootstrap.min.css">
 <!--Mi CSS-->
 <link rel="stylesheet" href="../css/main.css">
-<body class="aaaa">
+<body>
 
 <div id="error_page">
 
@@ -84,5 +84,6 @@
     </footer>
     <!--finaliza footer-->
 </div>
+<script src="../js/bootstrap.min.js"></script>
 </body>
 </html>
