--- a/index.html
+++ b/index.html
@@ -99,43 +99,35 @@
 				<form action="">
 					<div class="formulario__uno">
 						<div class="email">
-							<label for="correo">&nbsp;Email</label>
-							<input type="email" id="correo" placeholder="mail@ejemplo.com">
+							<label for="exampleInputEmail1">&nbsp;Email</label>
+							<input type="email" id="exampleInputEmail1" placeholder="mail@ejemplo.com">
 						</div>
+
 						<fieldset class="formulario__pedido" >
-							<legend>Info de pedido:</legend>
-							<div>
-								<label for="auto">Auto</label>
-								<input type="checkbox" id="auto">
-							</div>
-							<div>
-								<label for="moto">Moto</label>
-								<input type="checkbox" id="moto">
-							</div>
-							<div>
-								<label for="camioneta">Camioneta</label>
-								<input type="checkbox" id="camioneta">
-							</div>
+							<legend>Vehículo:</legend>
+							<select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+								<option selected>Auto</option>
+								<option value="1">Moto</option>
+								<option value="2">Camioneta</option>
+							</select>
 						</fieldset>
-						<fieldset class="formulario__retiro">
-							<legend>Info de retiro:</legend>
-							<div>
-								<label for="casa">Recibir en domicilio</label>
-								<input type="radio" id="casa" name="retiro">
-							</div>
-							<div>
-								<label for="empresa">Retiro en la empresa</label>
-								<input type="radio" id="empresa" name="retiro">
-							</div>
-							<div>
-								<label for="provincia">Provincia</label>
-								<select name="" id="">
-									<option value="">CABA</option>
-									<option value="">GBA</option>
+						<fieldset class="formulario__retiro" >
+							<legend>Recibir en:</legend>
+							<select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+								<option selected>Domicilio</option>
+								<option value="1">Empresa</option>
+								<option value="2">Otro</option>
+							</select>
+						</fieldset>
+						<fieldset class="formulario__retiro" >
+							<legend>Lugar de residencia:</legend>
+								<select name="retiro" id="retiro" class="form-select form-select-lg mb-3">
+									<option value="CABA">CABA</option>
+									<option value="GBA">GBA</option>
 								</select>
-							</div>
-							</fieldset>
+						</fieldset>
 					</div>
+					
 
 					<!--Consultas-->
 					
@@ -156,7 +148,7 @@
 
 						<div>
 							<h2>UBICACIÓN:</h2>
-								<div class="mapa__ubicacion">
+								<div>
 									<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.8317195252894!2d-58.38375288502698!3d-34.60841656525324!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccad03e68f13b%3A0x77d2b0d75f15235b!2sAv.%209%20de%20Julio%20%26%20Av.%20Rivadavia%2C%20C1009%20CABA!5e0!3m2!1ses!2sar!4v1655262161354!5m2!1ses!2sar"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 								</div>
 						</div>
